# pointgroup-hs

./: .gitignore  .gitmodules  LICENSE  README.md  cabal.project  pointgroup-hs.cabal  setup-env  setup-local.sh
app/: Main.hs  Models.hs  PointGroup.hs  PointNet.hs  Preprocess.hs  UNet.hs  Util.hs
src/: experiment.py
