cabal-version:       >=1.10

name:                pointgroup-hs
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Abastro
maintainer:          abab9579@naver.com
category:            Data
build-type:          Simple

executable pointgroup-hs
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.14 && <4.15
  hs-source-dirs:      app
  default-language:    Haskell2010
